--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <p class="numbers"></p>
-    <h2 class="result"></h2>
+    <p class="lastOp"></p>
+    <h2 class="presentOp"></h2>
     <button class="seven number">7</button>
     <button class="eight number">8</button>
     <button class="nine number">9</button>
